- Calling the Api of Coincap with Fetch
- Creating a section for the table in pug to render the prices page

- Creating the table with the headers, icons and other information

- Adding the table to the DOM

--- a/pug/prices.pug
+++ b/pug/prices.pug
@@ -3,3 +3,5 @@ block content
     main.contenido--container
         +caja--con-fondo-grande("","hola", "Soy un")
         p.contenido--texto Hola, soy un contenido2
+        section.table-prices
+    script(src="../js/prices.js") 
