- Adding the racking
- Adding a colspan in a th

- Organizinfg some mixing for the titles to make them more reusables

- Organizing the table

--- a/sass/components/_botons.scss
+++ b/sass/components/_botons.scss
@@ -1,6 +1,5 @@
 .boton--ver-precios {
     height: 100px;
     justify-self: center;
-    @include boton();
-    @include font-size(32px);
+    @include boton(32px);
 }
