--- a/css/cryptoprices.css
+++ b/css/cryptoprices.css
@@ -451,11 +451,9 @@ output {
 body {
   margin: 0;
   background-color: rgb(5, 23, 1);
-  color: #FFF;
   font-family: "Lato", sans-serif;
   font-size: 18px;
-  font-size: 1.125rem;
-  line-height: 1.8rem;
+  color: #FFF;
 }
 
 main {
@@ -486,13 +484,11 @@ main {
   margin-right: 50px;
 }
 .nav--header ul a {
-  color: #0CA183;
-  font-family: "Oswald", sans-serif;
   text-transform: uppercase;
   font-weight: 700;
+  font-family: "Oswald", sans-serif;
   font-size: 24px;
-  font-size: 1.5rem;
-  line-height: 2.4rem;
+  color: #0CA183;
 }
 @media only screen and (min-width: 992px) {
   .nav--header ul {
@@ -510,13 +506,14 @@ main {
 }
 
 .boton--contacto {
-  color: #FFF;
   border-radius: 8px;
   padding: 5px 25px;
   background: linear-gradient(271.47deg, #035D4E 14.62%, #0CA183 68.13%);
-  font-family: "Oswald", sans-serif;
   text-transform: uppercase;
   font-weight: 700;
+  font-family: "Oswald", sans-serif;
+  font-size: 24px;
+  color: #FFF;
 }
 .boton--contacto:hover {
   background: linear-gradient(-271.47deg, #035D4E 14.62%, #0CA183 68.13%);
@@ -557,12 +554,11 @@ main {
   justify-content: center;
 }
 .caja--grande h2 {
-  font-family: "Oswald", sans-serif;
   text-transform: uppercase;
   font-weight: 700;
+  font-family: "Oswald", sans-serif;
   font-size: 32px;
-  font-size: 2rem;
-  line-height: 3.2rem;
+  color: #FFF;
 }
 .caja--grande .caja--con-fondo__contenido {
   padding-top: 10px;
@@ -612,19 +608,53 @@ main {
   grid-column: 3/4;
 }
 
+.contenido--container {
+  display: flex;
+  justify-content: center;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+  margin: 20px;
+}
+table th {
+  border-bottom: 2px solid #0CA183;
+  padding: 10px;
+  text-align: center;
+  background-color: #333333;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-family: "Oswald", sans-serif;
+  font-size: 24px;
+  color: #0CA183;
+}
+table td {
+  border-bottom: 1px solid #0CA183;
+  padding: 10px;
+}
+table tr:nth-child(even) {
+  background-color: #202020;
+}
+table tr:nth-child(odd) {
+  background-color: #2d2d2d;
+}
+table img {
+  height: 40px;
+  width: 40px;
+}
+
 .boton--ver-precios {
   height: 100px;
   justify-self: center;
-  color: #FFF;
   border-radius: 8px;
   padding: 5px 25px;
   background: linear-gradient(271.47deg, #035D4E 14.62%, #0CA183 68.13%);
-  font-family: "Oswald", sans-serif;
   text-transform: uppercase;
   font-weight: 700;
+  font-family: "Oswald", sans-serif;
   font-size: 32px;
-  font-size: 2rem;
-  line-height: 3.2rem;
+  color: #FFF;
 }
 .boton--ver-precios:hover {
   background: linear-gradient(-271.47deg, #035D4E 14.62%, #0CA183 68.13%);
