--- a/pug/components/header.pug
+++ b/pug/components/header.pug
@@ -1,6 +1,10 @@
 header.header
     .logo-cryptoprices: a(href="../html/principal.html")
         img(src="../../images/Cryptoprices.svg", alt="logo-cryptoprices")
+    .buscar
+        input#cryptoCurrency-name(placeholder="Ej. Bitcoin")
+        a(href="../html/filtro.html")
+            button(onclick="verCryptocurrency()") Ver Precio
     nav.nav--header: ul
         li: a(href="../html/principal.html") Inicio
         li: a(href="../html/prices.html") Precios
