--- a/pug/contact.pug
+++ b/pug/contact.pug
@@ -1,5 +1,13 @@
 extend components/template.pug
 block content
     main.form--container
-        +caja--con-fondo-grande("","hola", "Soy un")
-        p.contenido--texto Hola, soy un formulario
+        h2 Formulario / Comentario
+        form(id="form-comment")
+            label(for="username") Nombre de usuario
+            input(type="text" id="username" name="username")
+            label(for="comment")   Comentario
+            textarea(id="comment" name="comment") 
+            input(type="submit" value="Enviar")
+        section#comments
+            h2 Comentarios:
+    script(src="../js/comments.js") 
