--- a/pug/components/footer.pug
+++ b/pug/components/footer.pug
@@ -1,4 +1,4 @@
 footer.footer
     p.derechos-autor Miguel Ángel - 2023
-    a(href='../html/contact.html')
+    a(href='../html/comments.html')
         button.boton--contacto Contactar
