--- a/pug/components/header.pug
+++ b/pug/components/header.pug
@@ -8,4 +8,4 @@ header.header
     nav.nav--header: ul
         li: a(href="../html/principal.html") Inicio
         li: a(href="../html/prices.html") Precios
-        li: a(href="../html/contact.html") Contacto
+        li: a(href="../html/comments.html") Contacto
