--- a/sass/cryptoprices.scss
+++ b/sass/cryptoprices.scss
@@ -7,5 +7,7 @@
 @import "components/cajas";
 @import "components/principals";
 @import "components/prices";
-@import "components/contacts";
-@import "components/botons"
+@import "components/comments";
+@import "components/botons";
+@import "components/forms";
+@import "components/comentarios";
