--- a/css/cryptoprices.css
+++ b/css/cryptoprices.css
@@ -514,6 +514,7 @@ main {
   width: 130px;
   border-radius: 8px;
   padding: 5px 25px;
+  cursor: pointer;
   background: linear-gradient(271.47deg, #035D4E 14.62%, #0CA183 68.13%);
   text-transform: uppercase;
   font-weight: 700;
@@ -537,6 +538,7 @@ main {
 .boton--contacto {
   border-radius: 8px;
   padding: 5px 25px;
+  cursor: pointer;
   background: linear-gradient(271.47deg, #035D4E 14.62%, #0CA183 68.13%);
   text-transform: uppercase;
   font-weight: 700;
@@ -610,31 +612,31 @@ main {
 
 .caja--grande {
   margin-bottom: 30px;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  grid-row: 1/2;
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
   grid-column: 1/4;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
 }
 
 .contenido--texto {
   height: 200px;
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 1;
-  grid-row: 2/3;
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-column: 1/3;
-}
-
-.boton--ver-precios {
   -ms-grid-row: 2;
   -ms-grid-row-span: 1;
   grid-row: 2/3;
+}
+
+.boton--ver-precios {
   -ms-grid-column: 3;
   -ms-grid-column-span: 1;
   grid-column: 3/4;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
 }
 
 .contenido--container {
@@ -673,11 +675,46 @@ table img {
   width: 40px;
 }
 
+.form--container {
+  display: flex;
+  flex-direction: column;
+}
+@media only screen and (min-width: 992px) {
+  .form--container {
+    width: 800px;
+    margin: 0 auto;
+  }
+}
+
+.form-title {
+  margin: 20px auto;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-family: "Oswald", sans-serif;
+  font-size: 32px;
+  color: #FFF;
+}
+
+.form-and-comments {
+  display: flex;
+}
+
+#form-comment {
+  padding: 50px;
+  width: 50%;
+}
+
+#comments {
+  padding: 50px;
+  width: 50%;
+}
+
 .boton--ver-precios {
   height: 100px;
   justify-self: center;
   border-radius: 8px;
   padding: 5px 25px;
+  cursor: pointer;
   background: linear-gradient(271.47deg, #035D4E 14.62%, #0CA183 68.13%);
   text-transform: uppercase;
   font-weight: 700;
@@ -687,4 +724,63 @@ table img {
 }
 .boton--ver-precios:hover {
   background: linear-gradient(-271.47deg, #035D4E 14.62%, #0CA183 68.13%);
+}
+
+#form-comment {
+  display: flex;
+  flex-direction: column;
+}
+#form-comment input[type=submit],
+#form-comment button {
+  align-self: flex-start;
+  border-radius: 8px;
+  padding: 5px 25px;
+  cursor: pointer;
+  background: linear-gradient(271.47deg, #035D4E 14.62%, #0CA183 68.13%);
+  text-transform: uppercase;
+  font-weight: 700;
+  font-family: "Oswald", sans-serif;
+  font-size: 16px;
+  color: #FFF;
+}
+#form-comment input[type=submit]:hover,
+#form-comment button:hover {
+  background: linear-gradient(-271.47deg, #035D4E 14.62%, #0CA183 68.13%);
+}
+#form-comment input[type=text],
+#form-comment textarea {
+  margin-bottom: 20px;
+  padding: 20px;
+  border: none;
+  background-color: #032a22;
+  font-family: "Lato", sans-serif;
+  font-size: 16px;
+  color: #FFF;
+}
+#form-comment input[type=text]:focus,
+#form-comment textarea:focus {
+  outline: none;
+  box-shadow: 0 0 5px #0CA183;
+}
+#form-comment form {
+  margin: 50px;
+  font-family: "Lato", sans-serif;
+  font-size: 16px;
+  color: #FFF;
+}
+#form-comment form input,
+#form-comment form textarea {
+  margin-bottom: 20px;
+}
+
+.comentario-card {
+  margin-top: 20px;
+  padding-bottom: 10px;
+  border-bottom: 2px solid #0CA183;
+}
+.comentario-card__texto {
+  color: #FFF;
+}
+.comentario-card__date {
+  color: #0CA183;
 }/*# sourceMappingURL=cryptoprices.css.map */
