- The search doesn't work right now, neet to check

--- a/pug/components/header.pug
+++ b/pug/components/header.pug
@@ -4,7 +4,7 @@ header.header
     .buscar
         input#cryptoCurrency-name(placeholder="Ej. Bitcoin")
         a(href="../html/filtro.html")
-            button(onclick="verCryptocurrency()") Ver Precio
+            button(onclick="verCryptocurrency()") Ver Info.
     nav.nav--header: ul
         li: a(href="../html/principal.html") Inicio
         li: a(href="../html/prices.html") Precios
