--- a/pug/filtro.pug
+++ b/pug/filtro.pug
@@ -2,4 +2,4 @@ extend components/template.pug
 block content
     main.contenido--container
         section#table-resultado-price
-    script(src="../js/prices.js") 
+    script(src="../js/filtro.js") 
